test/spec_vectors/memory_copy64/fail/module_51.wat
(module (memory i64 1 1) (func (export "testfn") (memory.copy (f32.const 10) (f64.const 20) (f64.const 30))))